fix: Light mode buttons were invisible

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,8 +3,8 @@ html {
 	--background: #ecf0f1;
 	--foreground: #212121;
 
-	--button-background: rgba(255, 255, 255, 0.05);
-	--button-foreground: #fefefe;
+	--button-background: #ccc;
+	--button-foreground: #333847;
 
 	--accent: oklch(0.65 0.16 239.0);
 
